<resources>
    <string name="app_name">BAWD-A tutorial app</string>
    <string name="action_settings">Settings</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="loginbtn">Login</string>
    <string name="register">Register now</string>
    <string name="registerbtn">Register</string>
    <string name="rUsername">Choose a username</string>
    <string name="rEmail">Email</string>
    <string name="rPhoneno">Phone number</string>
    <string name="rPassword">Password</string>
    <string name="gridshow">Gridshow</string>
    <string name="listshow">Listshow</string>
    <string name="rRepassword">Re enter password</string>
</resources>
