<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.RegisterPage"
    android:background="#0fb9b1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="51dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/logo" />

                <EditText
                    android:id="@+id/regUsername"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="123dp"
                    android:background="@drawable/register_field"
                    android:ems="10"
                    android:hint="@string/rUsername"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/regEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regUsername"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/register_field"
                    android:hint="@string/rEmail"
                    android:inputType="textEmailAddress"
                    android:maxEms="22" />

                <EditText
                    android:id="@+id/regPhoneno"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/register_field"
                    android:hint="@string/rPhoneno"
                    android:inputType="number"
                    android:maxEms="13" />

                <EditText
                    android:id="@+id/regPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regPhoneno"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/register_field"
                    android:hint="@string/rPassword"
                    android:inputType="numberPassword"
                    android:maxEms="13" />

                <EditText
                    android:id="@+id/regRepassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/register_field"
                    android:hint="@string/rRepassword"
                    android:inputType="numberPassword"
                    android:maxEms="13" />

                <Button
                    android:id="@+id/Register"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/register_field"
                    android:gravity="center"
                    android:text="@string/registerbtn"
                    android:textColor="#0fb9b1"
                    android:textStyle="bold" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>



    </android.support.constraint.ConstraintLayout>