<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0fb9b1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignStart="@+id/loginbtn"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/logo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/password"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="123dp"
                android:background="@drawable/edittextfield"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/usernamehint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="132dp"
                android:background="@drawable/edittextfield"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:ems="8"
                android:hint="@string/passwordhint"
                android:inputType="numberPassword" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/password"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="98dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/loginbtn"
                android:gravity="center"
                android:text="@string/loginbtn"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/registerbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/loginbtn"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-117dp"
                android:layout_marginBottom="28dp"
                android:text="@string/register" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>